force-app/main/default/objects/custom_create202__c/custom_create202__c.object-meta.xml
<CustomObject>
    <label>Custom created object202</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects202</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>