force-app/main/default/objects/custom_create202__c/fields/custom_create_202field634__c.field-meta.xml
<CustomField>
    <fullName>custom_create_202field634__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 202field634</label>
    <type>Checkbox</type>
</CustomField>